project("functions")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall")
#include_directories(../getting.started)

add_executable(mainret mainret.cpp)
add_executable(mainmath mainmath.cpp LocalMath.cpp LocalMath.h)
add_executable(fact fact.cpp LocalMath.cpp LocalMath.h)
add_executable(reset reset.cpp)
add_executable(count-calls count-calls.cpp)
add_executable(errMsg_initList errMsg_initList.cpp)
add_executable(good_printmain good_printmain.cpp)
add_executable(inline_shorter inline_shorter.cpp)
add_executable(arrRet arrRet.cpp)
add_executable(fcnptrRet fcnptrRet.cpp)
add_executable(make_plural make_plural.cpp make_plural.h)
add_executable(ref-fcn ref-fcn.cpp)
add_executable(refret-ex refret-ex.cpp)
add_executable(refparms refparms.cpp)
add_executable(stl-arr-fcns stl-arr-fcns.cpp)
add_executable(usefcnptr usefcnptr.cpp)
add_executable(wdebug wdebug.cpp)
